horizontal scroll issue

--- a/src/app/head/hamburger-menu/hamburger-menu.component.scss
+++ b/src/app/head/hamburger-menu/hamburger-menu.component.scss
@@ -451,6 +451,7 @@ app-header {
 .filter-div-scroll {
   overflow-y: auto;
   max-height: 100%;
+  overflow-x: hidden;
   width: 418px;
 }
 
